# crabster_simulator

./: CMakeLists.txt  package.xml  urdf.rviz
cpos_maphandler_dynamics/: CMakeLists.txt  package.xml
cpos_maphandler_dynamics/files/: soilbasin_jeju_terrain_v1.ply  soilbasin_jeju_terrain_v2.ply  soilbasin_jeju_terrain_v3.ply  soilbasin_jeju_terrain_v4.ply  soilbasin_jeju_terrain_v5.ply  track_node_100.txt
cpos_maphandler_dynamics/src/: main_contact_terrain.cpp  main_contact_terrain_crabster.cpp  main_contact_terrain_realtime.cpp
crabster_analysis/: CMakeLists.txt  package.xml
crabster_analysis/backup/include/: Applied_Force.h  CRABSTER.h  Common.h  Inputs.h  Integrator.h  Outputs.h
crabster_analysis/backup/src/: CRABSTER.cpp  Inputs.cpp  Integrator.cpp  KRISO_CRABSTER.cpp.backup  MBD_RecursiveII.cpp  Outputs.cpp
crabster_analysis/data/backup/: Subsystem24.json  Subsystem52.json  Subsystem62.json  Subsystem64.json
crabster_analysis/data/input_data/: AA_Simulation_Parameter.json  BaseBody.json  Subsystem11.json  Subsystem12.json  Subsystem13.json  Subsystem14.json  Subsystem21.json  Subsystem22.json  Subsystem23.json  Subsystem24.json  Subsystem32.json  Subsystem33.json  Subsystem34.json  Subsystem41.json  Subsystem42.json  Subsystem43.json  Subsystem44.json  Subsystem52.json  Subsystem53.json  Subsystem54.json  Subsystem61.json  Subsystem62.json  Subsystem63.json  Subsystem64.json
crabster_analysis/include/: CRABSTER.h  Common.h  MBD_RecursiveII.h
crabster_analysis/launch/: analysis_node.launch  analysis_single.launch
crabster_analysis/main_src/: KRISO_CRABSTER_NODE.cpp
crabster_analysis/src/: CRABSTER.cpp  Joint_Motrion.cpp  MBD_RecursiveII.cpp  main.cpp
crabster_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
crabster_moveit_config/config/: crabster.srdf  fake_controllers.yaml  gazebo_crabster.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
crabster_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
crabster_msgs/: CMakeLists.txt  package.xml
crabster_msgs/action/: CrabsterSimulation.action
crabster_visual/: CMakeLists.txt  package.xml  urdf.rviz
crabster_visual/data/input_data/: Subsystem13.json  Subsystem42.json  Subsystem51.json
crabster_visual/include/: mainwindow.h  rviz.h
crabster_visual/launch/: display.launch  run_simulator.launch
crabster_visual/meshes/: Subsystem11(FR_Yaw_Motor).STL  Subsystem12.STL  Subsystem13(FR_Pitch_Arm).STL  Subsystem21(MR_Yaw_Motor).STL  Subsystem22(MR_Roll_Arm).STL  Subsystem23(MR_Pitch_Arm).STL  Subsystem24(MR_Leg).STL  Subsystem31(RR_Yaw_Motor).STL  Subsystem32(RR_Roll_Arm).STL  Subsystem33(RR_Pitch_Arm).STL  Subsystem34(RR_Leg).STL  Subsystem41(FL_Yaw_Motor).STL  Subsystem42(FL_Roll_Arm).STL  Subsystem43(FL_Pitch_Arm).STL  Subsystem44(FL_Leg).STL  Subsystem51(ML_Yaw_Motor).STL  Subsystem52(ML_Roll_Arm).STL  Subsystem53(ML_Pitch_Arm).STL  Subsystem54(ML_Leg).STL  Subsystem61(RL_Yaw_Motor).STL  Subsystem62(RL_Roll_Arm).STL  Subsystem63(RL_Pitch_Arm).STL  Subsystem64(RL_Leg).STL
crabster_visual/src/: main.cpp  mainwindow.cpp  rviz.cpp
crabster_visual/ui/: mainwindow.ui  mainwindow.ui.autosave
crabster_visual/urdf/: crabster_description copy.urdf  crabster_description.urdf  crabster_description1.urdf
data/input_data/: AA_Simulation_Parameter.json  BaseBody.json  Subsystem11.json  Subsystem12.json  Subsystem13.json  Subsystem14.json  Subsystem21.json  Subsystem22.json  Subsystem23.json  Subsystem24.json  Subsystem31.json  Subsystem32.json  Subsystem33.json  Subsystem34.json  Subsystem41.json  Subsystem42.json  Subsystem43.json  Subsystem44.json  Subsystem51.json  Subsystem52.json  Subsystem53.json  Subsystem54.json  Subsystem61.json  Subsystem62.json  Subsystem63.json  Subsystem64.json
launch/: display.launch  run_simulator.launch
maptile_msg/: CMakeLists.txt  package.xml
maptile_msg/msg/: mapTileMsg.msg
meshes/: Subsystem14(FR_Leg).STL
src/DYNAMICS/: Applied_Force.cpp  Common.h  Inputs.cpp  Inputs.h  Joint_Motrion.h  MBD_RecursiveII.h  Outputs.cpp  Outputs.h
src/GUI/: mainwindow.cpp  mainwindow.h  rviz.cpp  rviz.h
ui/: mainwindow.ui
urdf/: crabster_description.urdf
